k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rentharbor-ingress
  namespace: rentharbor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: basket.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basket-service
            port:
              number: 80
  - host: catalog.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 80
  - host: communication.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: communication-service
            port:
              number: 80
  - host: document.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: document-service
            port:
              number: 80
  - host: ordering.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ordering-service
            port:
              number: 80
  - host: authorization.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authorization-service
            port:
              number: 80
